ja-source/docusaurus-plugin-content-docs/version-2.1/admin-manual/audit-plugin.md
---
{
  "title": "監査ログ",
  "language": "ja",
  "description": "Dorisはデータベース操作の監査機能を提供し、ユーザーログイン、クエリの記録を可能にします。"
}
---
Dorisは、データベース操作の監査機能を提供し、ユーザーログイン、クエリ、およびデータベースへの変更操作の記録を可能にします。Dorisでは、監査ログは内蔵のシステムテーブルを通じて直接クエリするか、Dorisの監査ログファイルを表示することで確認できます。

## 監査ログの有効化

監査ログプラグインは、グローバル変数`enable_audit_plugin`（デフォルトでは無効）を使用していつでも有効または無効にできます。例：

`set global enable_audit_plugin = true;`

有効にすると、Dorisは監査ログを`audit_log`テーブルに書き込みます。

監査ログプラグインはいつでも無効にできます：

`set global enable_audit_plugin = false;`

無効にした後、Dorisは`audit_log`テーブルへの書き込みを停止します。既に書き込まれた監査ログは変更されません。

## 監査ログテーブルの表示

:::caution 注意

バージョン2.1.8より前では、システムバージョンがアップグレードされる際に、監査ログテーブルのフィールドが増加する場合がありました。アップグレード後は、監査ログテーブルのフィールドに基づいて`ALTER TABLE`コマンドを使用して`audit_log`テーブルにフィールドを追加する必要があります。

:::

Dorisバージョン2.1以降、Dorisは監査ログ機能を有効にすることで、ユーザーの行動操作を`__internal_schema`データベースの[`audit_log`](../admin-manual/system-tables/internal_schema/audit_log)テーブルに書き込むことができます。

監査ログテーブルは動的パーティションテーブルで、デフォルトで日単位でパーティション分割され、直近30日間のデータを保持します。`ALTER TABLE`文を使用して`dynamic_partition.start`プロパティを変更することで、動的パーティションの保持期間を調整できます。

## 監査ログファイル

`fe.conf`で、`LOG_DIR`はFEログの格納パスを定義します。このFEノードで実行されたすべてのデータベース操作は`${LOG_DIR}/fe.audit.log`に記録されます。クラスター内のすべての操作を表示するには、各FEノードの監査ログを確認する必要があります。

## 監査ログ設定

**グローバル変数：**

監査ログ変数は`set [global] <var_name> = <var_value>`を使用して変更できます。

| 変数                                   | デフォルト値 | 説明                                          |
| -------------------------------------- | ------------- | ----------------------------------------------- |
| `audit_plugin_max_batch_interval_sec`  | 60秒    | 監査ログテーブルの最大書き込み間隔。 |
| `audit_plugin_max_batch_bytes`         | 50MB          | 監査ログテーブルのバッチあたりの最大データ量。 |
| `audit_plugin_max_sql_length`          | 4096          | 監査ログテーブルに記録されるSQL文の最大長。 |
| `audit_plugin_load_timeout`            | 600秒   | 監査ログインポートジョブのデフォルトタイムアウト。      |

**FE設定項目：**

FE設定項目は`fe.conf`ディレクトリを編集することで変更できます。

| 設定項目         | 説明                                                                                                                                                                 |
| -------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `skip_audit_user_list`     | 特定のユーザーの操作を監査ログに記録したくない場合、この設定を変更できます（バージョン3.0.01以降サポート）。例えば、監査ログ記録から`user1`と`user2`を除外するには：`skip_audit_user_list=user1,user2`|
